src/include/yices.h


__YICES_DLLSPEC__ extern term_t yices_parse_rational(const char *s);
__YICES_DLLSPEC__ extern term_t yices_parse_float(const char *s);
__YICES_DLLSPEC__ extern term_t yices_add(term_t t1, term_t t2);     
__YICES_DLLSPEC__ extern term_t yices_sub(term_t t1, term_t t2);     
__YICES_DLLSPEC__ extern term_t yices_neg(term_t t1);                
__YICES_DLLSPEC__ extern term_t yices_mul(term_t t1, term_t t2);     
__YICES_DLLSPEC__ extern term_t yices_square(term_t t1);             
__YICES_DLLSPEC__ extern term_t yices_power(term_t t1, uint32_t d);  
__YICES_DLLSPEC__ extern term_t yices_sum(uint32_t n, const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_product(uint32_t n, const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_division(term_t t1, term_t t2);
__YICES_DLLSPEC__ extern term_t yices_idiv(term_t t1, term_t t2);
__YICES_DLLSPEC__ extern term_t yices_imod(term_t t1, term_t t2);
__YICES_DLLSPEC__ extern term_t yices_divides_atom(term_t t1, term_t t2);
__YICES_DLLSPEC__ extern term_t yices_is_int_atom(term_t t);
__YICES_DLLSPEC__ extern term_t yices_abs(term_t t);
__YICES_DLLSPEC__ extern term_t yices_floor(term_t t);
__YICES_DLLSPEC__ extern term_t yices_ceil(term_t t);
__YICES_DLLSPEC__ extern term_t yices_poly_int32(uint32_t n, const int32_t a[], const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_poly_int64(uint32_t n, const int64_t a[], const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_poly_rational32(uint32_t n, const int32_t num[], const uint32_t den[], const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_poly_rational64(uint32_t n, const int64_t num[], const uint64_t den[], const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_poly_mpz(uint32_t n, const mpz_t z[], const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_poly_mpq(uint32_t n, const mpq_t q[], const term_t t[]);
__YICES_DLLSPEC__ extern term_t yices_arith_eq_atom(term_t t1, term_t t2);   
__YICES_DLLSPEC__ extern term_t yices_arith_neq_atom(term_t t1, term_t t2);  
__YICES_DLLSPEC__ extern term_t yices_arith_geq_atom(term_t t1, term_t t2);  
__YICES_DLLSPEC__ extern term_t yices_arith_leq_atom(term_t t1, term_t t2);  
__YICES_DLLSPEC__ extern term_t yices_arith_gt_atom(term_t t1, term_t t2);   
__YICES_DLLSPEC__ extern term_t yices_arith_lt_atom(term_t t1, term_t t2);   
__YICES_DLLSPEC__ extern term_t yices_arith_eq0_atom(term_t t);   
__YICES_DLLSPEC__ extern term_t yices_arith_neq0_atom(term_t t);  
__YICES_DLLSPEC__ extern term_t yices_arith_geq0_atom(term_t t);  
__YICES_DLLSPEC__ extern term_t yices_arith_leq0_atom(term_t t);  
__YICES_DLLSPEC__ extern term_t yices_arith_gt0_atom(term_t t);   
__YICES_DLLSPEC__ extern term_t yices_arith_lt0_atom(term_t t);   
__YICES_DLLSPEC__ extern term_t yices_bvconst_uint32(uint32_t n, uint32_t x);
__YICES_DLLSPEC__ extern term_t yices_bvconst_uint64(uint32_t n, uint64_t x);
__YICES_DLLSPEC__ extern term_t yices_bvconst_int32(uint32_t n, int32_t x);
__YICES_DLLSPEC__ extern term_t yices_bvconst_int64(uint32_t n, int64_t x);
__YICES_DLLSPEC__ extern term_t yices_bvconst_mpz(uint32_t n, const mpz_t x);
__YICES_DLLSPEC__ extern term_t yices_bvconst_zero(uint32_t n);
__YICES_DLLSPEC__ extern term_t yices_bvconst_one(uint32_t n);
__YICES_DLLSPEC__ extern term_t yices_bvconst_minus_one(uint32_t n);
__YICES_DLLSPEC__ extern term_t yices_bvconst_from_array(uint32_t n, const int32_t a[]);
__YICES_DLLSPEC__ extern term_t yices_parse_bvbin(const char *s);
__YICES_DLLSPEC__ extern term_t yices_parse_bvhex(const char *s);
__YICES_DLLSPEC__ extern term_t yices_bvadd(term_t t1, term_t t2);     
__YICES_DLLSPEC__ extern term_t yices_bvsub(term_t t1, term_t t2);     
__YICES_DLLSPEC__ extern term_t yices_bvneg(term_t t1);                