src/include/yices_types.h


typedef int32_t term_t;